# propeller-crossflow-autorotation-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  king_propeller_autorotation_in_crossflow.docx  main.cpp  plotit.m  report_data.xlsx  solver.h  system_parameters.h  util.h  vec3.h  ~$ng_propeller_autorotation_in_crossflow.docx  ~WRL1644.tmp  ~WRL3402.tmp
ansys-fluent-analysis/: airfoil_model.wbpj
ansys-fluent-analysis/airfoil_model_files/: .project_cache
ansys-fluent-analysis/airfoil_model_files/dp0/: designPoint.wbdp
ansys-fluent-analysis/airfoil_model_files/dp0/FFF-1/DM/: FFF-1.agdb
ansys-fluent-analysis/airfoil_model_files/dp0/FFF-1/Fluent/: FFF-1.1-1-00047.dat.h5  FFF-1.1-1.cas.h5  FFF-1.1-Setup-Output.cas.h5  FFF-1.1.ip  FFF-1.1.set  cd-rfile.out  cl-rfile.out
ansys-fluent-analysis/airfoil_model_files/dp0/FFF-1/MECH/: FFF-1.1.msh
ansys-fluent-analysis/airfoil_model_files/dp0/FFF-1/Post/: Fluid Flow Fluent.cst
ansys-fluent-analysis/airfoil_model_files/dp0/FFF/Fluent/: FFF-5-00000.dat.h5  FFF-6-00057.dat.h5  FFF-6.cas.h5  FFF-Setup-Output.cas.h5  FFF.ip  FFF.set  cd-rfile.out  cl-rfile.out
ansys-fluent-analysis/airfoil_model_files/dp0/FFF/MECH/: FFF.msh
ansys-fluent-analysis/airfoil_model_files/dp0/FFF/Post/: Fluid Flow Fluent.cst
ansys-fluent-analysis/airfoil_model_files/progress_files/dp1/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp1/FFF/Fluent/: Solution.trn  report.xml
ansys-fluent-analysis/airfoil_model_files/progress_files/dp10/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp10/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp11/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp11/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp12/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp12/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp13/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp13/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp14/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp14/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp15/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp15/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp16/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp16/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp17/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp17/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp18/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp18/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp19/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp19/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp2/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp2/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp20/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp20/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp21/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp21/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp22/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp22/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp3/FFF-1/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/progress_files/dp3/FFF/Fluent/: Solution.trn
ansys-fluent-analysis/airfoil_model_files/session_files/: journal1.wbjn
ansys-fluent-analysis/airfoil_model_files/user_files/: DesignPointLog.csv
dae-51/: dae51_lower_fluent.txt  dae51_upper_fluent.txt
report/: king_modeling_crossflow_induced_propeller_autorotation.docx  king_propeller_autorotation_in_crossflow.docx  report_data.xlsx
solver/: aero_coefficient_interpolator.cpp  aero_coefficient_interpolator.h  app.cpp  app.h  configuration.h  main.cpp  plot_configuration.h  solution.cpp  solution.h  solver.h  system_parameters.h  util.cpp  util.h  vec3.h  window.cpp  window.h
(+13 files in other folders)
